fixing nav links on mobile view

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -272,6 +272,8 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
     margin-bottom: 50px;
   }
 
+  .center .navbar .nav, 
+  .center .navbar .nav > li,
   .nav > li {
     position: relative;
     display: block;
